fix whitespace and navbar

--- a/styles/home_style.css
+++ b/styles/home_style.css
@@ -1,4 +1,11 @@
-        /* Slide-show*/
+       body{
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden; 
+       }
+       /* Slide-show*/
         
         .carousel-item {
             border: 2xp;
@@ -67,7 +74,7 @@
 
          /*top author*/
          #author img{
-            margin top: -50px;
+            margin-top: -50px;
          }
 
          #author card{
