--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -10,7 +10,7 @@
 }
 
 .dropbtn {
-    background-color: #3498DB;
+    background-color:gray;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -20,7 +20,7 @@
 
 .dropbtn:hover,
 .dropbtn:focus {
-    background-color: #2980B9;
+    background-color: #8f8f8f;
 }
 
 .dropdown {
@@ -29,7 +29,7 @@
 }
 
 
-/* .dropdown-content {
+ .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
@@ -37,7 +37,8 @@
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-  } */
+    right:0;
+  } 
 
 .dropdown-content a {
     color: black;
@@ -55,26 +56,31 @@
 }
 
 
-/* Slide-show*/
+@media(min-width:300px){
+    #brand{
+        font-size: 15px;
+      }
+      #linknames{
+        font-size: 14px;
+      }
+      .dropbtn{
+        padding-top: 4px;
+        padding-bottom: 4px;
+        padding-right: 10px;
+        padding-left: 10px;
+        font-size: 16px;
+    }
+    }
 
-.carousel-item {
-    border: 2xp;
-    height: 550px;
-    background-position: center;
-    position: relative;
-    background-size: cover;
-}
-
-.carousel-item-img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 100px;
-}
-
-#slide-show {
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-}
+    @media(min-width:576px){
+        #brand{
+          font-size:18px;
+        }
+        .dropbtn{
+            padding-top: 8px;
+            padding-bottom: 8px;
+            padding-right: 14px;
+            padding-left: 14px;
+            font-size: 21px;
+        }
+    }
